# KrKr2-Revived-bak

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  build_all.sh  vcpkg.json
backend/core/: CMakeLists.txt
backend/core/base/: 7zArchive.cpp  BinaryStream.cpp  BinaryStream.h  CMakeLists.txt  CharacterSet.cpp  CharacterSet.h  EventIntf.cpp  EventIntf.h  KAGParser.cpp  KAGParser.h  MsgIntf.cpp  MsgIntf.h  MsgIntfInc.h  Random.h  ScriptMgnIntf.cpp  ScriptMgnIntf.h  StorageIntf.cpp  StorageIntf.h  SysInitIntf.cpp  SysInitIntf.h  SystemIntf.cpp  SystemIntf.h  TARArchive.cpp  TextStream.cpp  TextStream.h  UserEvent.h  UtilStreams.cpp  UtilStreams.h  XP3Archive.cpp  XP3Archive.h  XP3CryptoRegistry.cpp  XP3CryptoRegistry.h  ZIPArchive.cpp  tar.h
backend/core/base/impl/: EventImpl.cpp  EventImpl.h  FileSelector.cpp  FileSelector.h  MsgImpl.cpp  MsgImpl.h  NativeEventQueue.cpp  NativeEventQueue.h  ScriptMgnImpl.cpp  ScriptMgnImpl.h  StorageImpl.cpp  StorageImpl.h  SysInitImpl.cpp  SysInitImpl.h  (+2 more)
backend/core/common/: Defer.h
backend/core/environ/: Application.cpp  Application.h  ApplicationSpecialPath.h  CMakeLists.txt  DetectCPU.cpp  DetectCPU.h  DumpSend.cpp  Platform.h  RegistryEmulation.cpp  RegistryEmulation.h  XP3ArchiveRepack.cpp  XP3ArchiveRepack.h  combase.h  cpu_types.h  typedefine.h  vkdefine.h
backend/core/extension/: CMakeLists.txt  Extension.cpp  Extension.h
backend/core/movie/: CMakeLists.txt
backend/core/plugin/: CMakeLists.txt  PluginCompat.h  PluginImpl.cpp  PluginImpl.h  PluginIntf.cpp  PluginIntf.h  ncb_foreach.inc  ncb_invoke.hpp  ncbind.cpp  ncbind.hpp
backend/core/sound/: CDDAImpl.h  CDDAIntf.cpp  CDDAIntf.h  CMakeLists.txt  FFWaveDecoder.cpp  FFWaveDecoder.h  MIDIImpl.h  MIDIIntf.cpp  MIDIIntf.h  MathAlgorithms.cpp  MathAlgorithms.h  PhaseVocoderDSP.cpp  PhaseVocoderDSP.h  PhaseVocoderFilter.cpp  PhaseVocoderFilter.h  RingBuffer.h  SoundBufferBaseImpl.h  SoundBufferBaseIntf.cpp  SoundBufferBaseIntf.h  VorbisWaveDecoder.cpp  VorbisWaveDecoder.h  WaveDecoder_Rust.h  WaveFormatConverter.cpp  WaveFormatConverter_SSE.cpp  WaveImpl.h  WaveIntf.cpp  WaveIntf.h  WaveLoopManager.cpp  WaveLoopManager.h  WaveSegmentQueue.cpp  WaveSegmentQueue.h  xmmlib.cpp  xmmlib.h
backend/core/tjs2/: CMakeLists.txt  CompatStubs.cpp  CompatStubs.h  tjs.cpp  tjs.h  tjsArray.cpp  tjsArray.h  tjsBinarySerializer.cpp  tjsBinarySerializer.h  tjsByteCodeLoader.cpp  tjsByteCodeLoader.h  tjsCommHead.h  tjsCompileControl.cpp  tjsCompileControl.h  tjsConfig.cpp  tjsConfig.h  tjsConstArrayData.cpp  tjsConstArrayData.h  tjsDate.cpp  tjsDate.h  tjsDateParser.cpp  tjsDateParser.h  tjsDebug.cpp  tjsDebug.h  tjsDictionary.cpp  tjsDictionary.h  tjsDisassemble.cpp  tjsError.cpp  tjsError.h  tjsErrorDefs.h  tjsException.cpp  tjsException.h  tjsGlobalStringMap.cpp  tjsGlobalStringMap.h  tjsHashSearch.h  tjsInterCodeExec.cpp  tjsInterCodeExec.h  tjsInterCodeGen.cpp  tjsInterCodeGen.h  tjsInterface.cpp  (+36 more)
backend/core/utils/: CMakeLists.txt  ClipboardIntf.cpp  ClipboardIntf.h  DebugIntf.cpp  DebugIntf.h  Debugger.h  Exception.h  FilePathUtil.h  MathAlgorithms.h  MathAlgorithms_Default.cpp  MathAlgorithms_Default.h  MiscUtility.cpp  ObjectList.h  PadIntf.cpp  PadIntf.h  Random.cpp  Random.h  RealFFT.h  RealFFT_Default.cpp  StringUtil.h  ThreadIntf.cpp  ThreadIntf.h  TickCount.cpp  TickCount.h  TimerIntf.cpp  TimerIntf.h  VelocityTracker.cpp  VelocityTracker.h  md5.c  md5.h
backend/core/visual/: BasicDrawDevice.h  BitmapBitsAlloc.cpp  BitmapBitsAlloc.h  BitmapInfomation.cpp  BitmapInfomation.h  BitmapIntf.cpp  BitmapIntf.h  BitmapLayerTreeOwner.cpp  BitmapLayerTreeOwner.h  CMakeLists.txt  CharacterData.cpp  CharacterData.h  ComplexRect.cpp  ComplexRect.h  DrawDevice.h  FontImpl.cpp  FontImpl.h  FontRasterizer.h  FontSystem.cpp  FontSystem.h  FreeType.cpp  FreeType.h  FreeTypeFace.h  FreeTypeFontRasterizer.cpp  FreeTypeFontRasterizer.h  GraphicsLoadThread.cpp  GraphicsLoadThread.h  GraphicsLoaderIntf.cpp  GraphicsLoaderIntf.h  IRenderer.h  IWindow.h  ImageFunction.cpp  ImageFunction.h  LayerBitmapImpl.h  LayerBitmapIntf.cpp  LayerBitmapIntf.h  LayerImpl.cpp  LayerImpl.h  LayerIntf.cpp  LayerIntf.h  (+49 more)
backend/platform/: CMakeLists.txt
backend/platform/environ_headless/: MacDialogs.mm  MacPlatformCompat.cpp  SystemControl.cpp  SystemControl.h  krkr2_api_impl.cpp
backend/platform/legacy_cocos2d/: AppDelegate.cpp  AppDelegate.h  CCKeyCodeConv.cpp  CustomFileUtils.cpp  CustomFileUtils.h  MainScene.cpp  MainScene.h  YUVSprite.cpp  YUVSprite.h
backend/plugins/: CMakeLists.txt  LayerExBase.cpp  LayerExBase.h  PluginStub.h  addFont.cpp  csvParser.cpp  dirlist.cpp  fftgraph.cpp  getSample.cpp  getabout.cpp  layerExBase.hpp  layerExMovie.cpp  layerExPerspective.cpp  saveStruct.cpp  scriptsEx.cpp  tp_stub.h  varfile.cpp  win32_dt.h  win32dialog.cpp  windowEx.cpp  wutcwf.cpp  xp3filter.cpp  xp3filter.h
backend/plugins/DrawDeviceForSteam/: CMakeLists.txt  DrawDeviceForSteam.cpp
backend/plugins/KAGParser/: readme.txt
backend/plugins/fstat/: CMakeLists.txt  main.cpp  manaul.tjs
backend/plugins/json/: CMakeLists.txt  anaul.tjs  jsonPlugin.cpp
backend/plugins/layerex_draw/: CMakeLists.txt  manual.tjs  readme.txt
backend/plugins/motionplayer/: CMakeLists.txt  D3DAdaptor.h  EmotePlayer.cpp  EmotePlayer.h  Player.cpp  Player.h  ResourceManager.cpp  ResourceManager.h  SeparateLayerAdaptor.h  main.cpp
backend/plugins/psbfile/: BitConverter.h  CMakeLists.txt  Consts.h  EMoteCTX.h  PSB.h  PSBEnums.h  PSBExtension.h  PSBFile.cpp  PSBFile.h  PSBHeader.h  PSBMedia.cpp  PSBMedia.h  PSBValue.cpp  PSBValue.h  TJSCompat.cpp  TJSCompat.h  main.cpp
backend/plugins/psdfile/: CMakeLists.txt  main.cpp  manual.tjs  psdclass.cpp  psdclass.h  psdclass_loadmem.cpp  psdclass_loadstream.cpp  psdclass_loadstreambase.cpp  readme.txt
backend/plugins/simplebinder/: readme.txt  simplebinder.hpp  simplebinder.txt
backend/plugins/steam/: CMakeLists.txt  manual.tjs  steamPlugin.cpp  steam_api.cpp
backend/rust/krkr2-archive/: Cargo.toml  build.rs
backend/rust/krkr2-encoding/: Cargo.toml  build.rs  cbindgen.toml
(+357 files in other folders)
